--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
     "uuid": "^11.0.5",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
